<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="email_body">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="select">"Отправить с помощью:"</string>
    <string name="select_mail">"Выберите почтовый клиент:"</string>
    <string name="practicum_link">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="developer_email">"pavelKhomenko8@gmail.com"</string>
    <string name="user_agreement_link">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="server_issuses">Ведутся работы на сервере, скоро все починим!</string>
    <string name="connections_issue">Проблемы со связью \n\nЗагрузка не удалась проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_head">Вы искали</string>
    <string name="clear_history_search">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="your_lib_is_empty">Ваша медиатека пуста</string>
    <string name="you_did_not_create_a_playlist_yet">Вы не создали\nни одного плейлиста</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="change_info_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="emptyPlaylist">Добавьте треки в плейлист \nдля их отображения</string>
</resources>