<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_all_around"
    android:paddingEnd="@dimen/padding_all_around"
    android:weightSum="3"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/ys_text_medium_regular"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/headers_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_text_medium_regular"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/black_text"
        app:rippleColor="@color/ripple_colour">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_text_medium_regular"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/playlist"
        app:iconGravity="textStart"
        app:iconTint="@color/black_text"
        app:rippleColor="@color/ripple_colour">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_text_medium_regular"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black_text"
        app:rippleColor="@color/ripple_colour">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>