<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextHead"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_14dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnSecondary">

        </com.google.android.material.textview.MaterialTextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        style="@style/CardViewStyle"
        android:layout_marginStart="@dimen/padding_all_around"
        android:layout_marginEnd="@dimen/padding_all_around"
        app:cardCornerRadius="@dimen/card_radius">

        <EditText
            android:id="@+id/search_input"
            style="@style/EditTextStyle"
            android:drawableStart="@drawable/search"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="@dimen/text_16sp">

        </EditText>

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/padding_all_around"
            android:src="@drawable/clear"
            android:visibility="invisible">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_all_around"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_view">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/search_history_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/ErrorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_18dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:paddingTop="@dimen/margin_24dp"
                android:text="@string/search_head">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/padding_all_around"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_view">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/deleteHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_34dp"
                android:layout_marginBottom="@dimen/margin_34dp"
                android:backgroundTint="?attr/color"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clear_history_search"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_14sp">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_nothing_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/ErrorImageStyle"
                android:layout_marginStart="@dimen/margin_120dp"
                android:layout_marginTop="@dimen/margin_102dp"
                android:layout_marginEnd="@dimen/margin_120dp"
                android:src="@drawable/nothing_found">

            </ImageView>

            <TextView
                style="@style/ErrorTextStyle"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:text="@string/nothing_found"
                android:textAlignment="center">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_no_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/ErrorImageStyle"
                android:layout_marginStart="@dimen/margin_120dp"
                android:layout_marginTop="@dimen/margin_102dp"
                android:layout_marginEnd="@dimen/margin_120dp"
                android:src="@drawable/connection_issue">

            </ImageView>

            <TextView
                style="@style/ErrorTextStyle"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:text="@string/connections_issue"
                android:textAlignment="center">

            </TextView>

            <Button
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8dp"
                android:backgroundTint="?attr/color"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/refresh"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_14sp">

            </Button>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>